sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: identifier expected but integer literal found.
		case p if(getValeur(p)<getValeur(p-1)) => echange(p-1,p): p -= 1
                                                                               ^