sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {

var p = 0
while(p<getNombreValeurs - 1){
	p match{
		case 0 => p += 1
		case p if(getValeur(p)<getValeur(p-1)) => echange(p-1,p): p -= 1
		case _ => p += 1
	}
}

}
